tests/baselines/reference/qualify.errors.txt
==== tests/cases/compiler/qualify.ts (8 errors) ====
    module M {
        export var m=0;
        export module N {
            export var n=1;
        }
    }
    
    module M {
        export module N {
            var y=m;
            var x=n+y;
        }
    }
    
    
    module T {
        export interface I {
            p;
        }
        export module U {
            var z:I=3;
                ~~~~~
!!! qualify.ts(21,13): error TS2012: Type 'number' is not assignable to type 'I':
!!! 	Type 'Number' is missing property 'p' from type 'I'.
            export interface I2 {
                q;
            }
        }
    }
    
    module Peer {
        export module U2 {
            var z:T.U.I2=3;
                ~~~~~~~~~~
!!! qualify.ts(30,13): error TS2012: Type 'number' is not assignable to type 'T.U.I2':
!!! 	Type 'Number' is missing property 'q' from type 'T.U.I2'.
        }
    }
    
    module Everest {
        export module K1 {
            export interface I3 {
                zeep;
            }
        }
        export module K2 {
            export interface I4 {
                z;
            }
            var v1:I4;
            var v2:K1.I3=v1;
                ~~~~~~~~~~~
!!! qualify.ts(45,13): error TS2012: Type 'I4' is not assignable to type 'K1.I3':
!!! 	Type 'I4' is missing property 'zeep' from type 'K1.I3'.
            var v3:K1.I3[]=v1;
                ~~~~~~~~~~~~~
!!! qualify.ts(46,13): error TS2012: Type 'I4' is not assignable to type 'K1.I3[]':
!!! 	Type 'I4' is missing property 'concat' from type 'K1.I3[]'.
            var v4:()=>K1.I3=v1;
                ~~~~~~~~~~~~~~~
!!! qualify.ts(47,13): error TS2012: Type 'I4' is not assignable to type '() => K1.I3':
!!! 	Type '() => K1.I3' requires a call signature, but type 'I4' lacks one.
            var v5:(k:K1.I3)=>void=v1;
                ~~~~~~~~~~~~~~~~~~~~~
!!! qualify.ts(48,13): error TS2012: Type 'I4' is not assignable to type '(k: K1.I3) => void':
!!! 	Type '(k: K1.I3) => void' requires a call signature, but type 'I4' lacks one.
            var v6:{k:K1.I3;}=v1;
                ~~~~~~~~~~~~~~~~
!!! qualify.ts(49,13): error TS2012: Type 'I4' is not assignable to type '{ k: K1.I3; }':
!!! 	Type 'I4' is missing property 'k' from type '{ k: K1.I3; }'.
        }
    }
    
    interface I {
        k;
    }
    
    var y:I;
    var x:T.I=y;
        ~~~~~~~
!!! qualify.ts(58,5): error TS2012: Type 'I' is not assignable to type 'T.I':
!!! 	Type 'I' is missing property 'p' from type 'T.I'.
    
    